<resources>
    <string name="app_name">Smvitm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyDn_6UEluvD0Hlz7cioEdb-QUGCBruXl0o</string>
    <string name="vtu_Notification">Circular</string>
    <string name="vtu_News">News</string>
    <string name="vtu_Results">Results</string>
    <string name="latest">News</string>
    <string name="contact_us">Conatact Us</string>
    <string name="map">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">SMVITM App is a simple app for students of SMVITM to know the classes scheduled for the day. The app can be configured once, after which he/she will able to check his/her timetable for the day in just one glance.</string>
    <string name="app_version">Beta</string>
    <string name="summary_support">If you find any mistakes in app please be kind to inform us.</string>
    <string name="title_send_feedback">Report a Problem</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">http://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_terms">Terms amp; Conditions</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose Email Client</string>
    <string name="title_new_notification_sound">Receive notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="my_feedback">send_my_feedback</string>
    <string name="app_ver">my_app_version</string>
    <string name="buildNo">my_b_no</string>
    <string name="req">req</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_settings_headers">Settings with Headers</string>
    <string name="title_activity_subject_infomation">SubjectInfomationActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_sub_information">SubInformationActivity</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_about_developres">AboutDevelopresActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_smvitm_cafe">SmvitmCafe</string>
    <string name="title_activity_department_list">DepartmentListActivity</string>
    <string name="title_activity_ola_question">OlaQuestionActivity</string>
    <string name="title_activity_website">WebsiteActivity</string>
    <string name="title_activity_about_smvitm">AboutSMVITMActivity</string>
    <string name="about_smvitm">
            \tFounded in 2010 by H. H. Shri Vishwavallabha Theertha Swamiji of Shri Sode Vadiraja Mutt – one of the 700 plus years old Ashta Mutts associated with the world famous Shri Krishna temple of Udupi in Karnataka – Shri Madhwa Vadiraja Institute of Technology and Management (SMVITM), situated at Bantakal in Udupi has carved a niche for itself in imparting quality engineering education in the coastal Karnataka region. Shri Swamiji started the institute with the sublime objective of providing quality higher education to the needy student community at affordable costs. The motto Engineering your Career and Character with Care well reflects the objectives and philosophy of the institute. Despite, being the youngest institute in the region, SMVITM has made remarkable strides in its journey towards excellence over the past five years and has emerged as the most promising engineering institute with its well-qualified and motivated faculty, state-of-the-art infrastructure and distinguished learning-centric facilities.
\n\n
    \tAt present, SMVITM, with a total student intake of 441 per year, offers Bachelor of Engineering (B.E.) courses in Civil Engineering, Computer Science and Engineering Electronics and Communication Engineering and Mechanical Engineering. Currently, 1562 students are pursuing their engineering education at the institute. Despite being located in a rural area, SMVITM ensures that its students are well trained in existing engineering practices and acquainted with the latest industrial trends.
\n\n
\tThe campus is conveniently located at Bantakal, which is about 6 km off the stretch of NH 66 that connects the coastal cities of Mangaluru (Mangalore) and Udupi. The campus is just 18 km away from Manipal, one of the well known educational hubs in South India and 12 km away from Udupi town. Udupi is well connected by road, rail and air to all the major cities across the country. The institute has well-furnished in-campus as well as off-campus hostels with all modern amenities, separately for boys and girls. The institute is affiliated to Visvesvaraya Technological University, Belagavi; approved by the All India Council for Technical Education, New Delhi and recognized by the Government of Karnataka.
\n\n
\tThe accomplishments of SMVITM have already garnered well-deserved recognition and widespread praise from eminent personalities across the spectrum. Late Dr. A. P. J. Abdul Kalam, former President of India, having admired the vision and value addition to engineering education taking place at the institute, made a visit to the campus and appreciated the holistic education imparted at SMVITM and inspired the students in 2014. Shri A. S. Kiran Kumar, Chairman, ISRO; Dr. B. N. Suresh, Distinguished Scientist, ISRO; Justice Dr. M. Rama Jois and many more renowned scientists, technocrats and educationists have visited the institute to motivate and guide the students.
\n\n
\tOwing to its exalted Vision, Mission and Objectives; commitment to the cause of education and remarkable accomplishments, SMVITM is consistently maintaining record admissions of more than 90 per cent of the intake for the last three years. Though the institution is still taking off, the achievements of its students, faculty and staff are many and commendable. The institute is growing fast, scaling greater heights by concentrating on excellence in education, research and promotion of placement and entrepreneurship through industry-academia tie-ups and value added programs. The management and the academic administration have been steadfast in their commitment to make SMVITM one of the best engineering institutes in South India in the very near future.
    </string>
    <string name="department_of_computer_science">Computer Science Engineering</string>
    <string name="department_of_electronics_and_communication">Electronics and Communication Engineering</string>
    <string name="department_of_civil">Civil Engineering</string>
    <string name="department_of_mechanical">Mechanical Engineering</string>
    <string name="department_of_mathematics">Mathematics</string>
    <string name="department_of_physics">Physics</string>
    <string name="department_of_chemistry">Chemistry</string>
    <string name="home_news">News</string>
    <string name="home_timetable">Timetable</string>
    <string name="home_calender">Calender</string>
    <string name="backdrop_home_label">Home</string>
    <string name="backdrop_faculty_label">Faculty</string>
    <string name="backdrop_study_materials_label">Study Materials</string>
    <string name="backdrop_facilities_label">Facilities</string>
    <string name="backdrop_about_smvitm_label">About SMVITM</string>
    <string name="backdrop_news_and_notification_label">News and Notification</string>
    <string name="backdrop_personalize">Personalize</string>
    <string name="backdrop_about_developer">About Developer</string>
</resources>