<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp" />



    <eu.long1.spacetablayout.SpaceTabLayout
        android:id="@+id/spaceTabLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="eu.long1.spacetablayout.SpaceTabLayoutBehavior"
        app:number_of_tabs="three"
        app:icon_one="@drawable/ic_home_black_24dp"
        app:icon_two="@drawable/ic_time_table"
        app:icon_three="@drawable/ic_news_black_24dp"
        app:text_one="@string/home_news"
        app:text_two="@string/home_timetable"
        app:text_three="@string/home_calender"
        app:tab_color="@color/colorPrimary"
        app:text_color="@color/textColorPrimary"/>

</android.support.design.widget.CoordinatorLayout>