<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="10">

      <!--  <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            &lt;!&ndash;<ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/arc"/>&ndash;&gt;
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center|center_horizontal"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:textAllCaps="true"
                android:text="@string/departmants"
                android:layout_gravity="center"
                android:drawableTop="@drawable/arc"/>
        </RelativeLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="2dp"
                android:layout_margin="5dp"
                android:minHeight="150dp"
                android:id="@+id/card_civil">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/ic_civil_engineer_icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/department_of_civil"
                        android:gravity="center"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="2dp"
                android:layout_margin="5dp"
                android:minHeight="150dp"
                android:id="@+id/card_cse">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/ic_computer_science_department_24dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/department_of_computer_science"
                        android:gravity="center"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="2dp"
                android:layout_margin="5dp"
                android:minHeight="150dp"
                android:id="@+id/card_ece">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/ic_enc_icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/department_of_electronics_and_communication"
                        android:gravity="center"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="2dp"
                android:layout_margin="5dp"
                android:minHeight="150dp"
                android:id="@+id/card_mech">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/ic_mech_icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/department_of_mechanical"
                        android:gravity="center"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="2dp"
                android:layout_margin="5dp"
                android:minHeight="150dp"
                android:id="@+id/card_physics">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/ic_physics_icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/department_of_physics"
                        android:gravity="center"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="2dp"
                android:layout_margin="5dp"
                android:minHeight="150dp"
                android:id="@+id/card_chemistry">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/ic_chemistry_icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/department_of_chemistry"
                        android:gravity="center"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="2dp"
                android:layout_margin="5dp"
                android:minHeight="150dp"
                android:id="@+id/card_math">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/ic_math_icon"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/department_of_mathematics"
                        android:gravity="center"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>


    </LinearLayout>
</ScrollView>